--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
+  "name": "my-nodejs-app",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "mocha",
+    "start": "node server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "express": "^5.1.0"
   },
@@ -6,9 +17,4 @@
     "chai": "^5.2.0",
     "mocha": "^11.5.0"
   }
-
-  "scripts": {
-    "test": "mocha"
-}
-
 }
